# hq-test

./: .cmr  .gitignore  .prettierignore  .prettierrc.yaml  CMakeLists.txt  LICENSE  appIcon.rc  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
assets/: LICENSE.rtf
backend/: bridge.cpp  db.cpp  dnd.cpp  fs.cpp  main.cpp  signalHandler.cpp
cmake/: WIX.template.in  wix_patch.xml
include/: bridge.h  db.h  dnd.h  fs.h  session.h  signalHandler.h
src/: App.tsx  global.d.ts  index.css  main.tsx
src/components/: Charts.tsx  Clock.tsx  Providers.tsx  SessionsForm.tsx  Utils.tsx
src/components/tabs/: Home.tsx  Sessions.tsx  Stats.tsx
src/components/ui/: AuroraBg.tsx  BgBeams.tsx  Tabs.tsx
src/utils/: date.ts  store.ts  url.ts  viewport.ts
